--- a/style.css
+++ b/style.css
@@ -6,3 +6,25 @@
     background-color: rgba(86,61,124,.15);
     border: 1px solid rgba(86,61,124,.2);
 }
+
+.espace-navbar {
+
+padding-bottom: 70px;
+
+}
+
+.container {
+
+margin-top: 20px;
+
+margin-bottom: 20px;
+
+padding-right: 15px;
+
+padding-left: 15px;
+
+margin-right: auto;
+
+margin-left: auto;
+
+}
