--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 body {
 
 font-family: 'Gentium Book Basic', serif;
+font-size: 16px;
+background: url(../image/ep_naturalblack.png);
+margin-top: 7em;
 
 }
-
+/*
 .row [class^="col-"] {
     
     
@@ -11,44 +14,26 @@ font-family: 'Gentium Book Basic', serif;
     border: 1px solid #ddd;
     background-color: rgba(86,61,124,.15);
     border: 1px solid rgba(86,61,124,.2);
-}
+}*/
 
 .espace-navbar {
 
 padding-bottom: 70px;
-
 }
 
 .container {
-
-margin-top: 20px;
-
-margin-bottom: 20px;
-
-padding-right: 15px;
-
-padding-left: 15px;
-
-margin-right: auto;
-
-margin-left: auto;
-
+margin: 20px auto 20px auto;
+padding: 0px 15px 0px 15px;
 }
 
 .image-loup-intro {
-
-height: 300px;
-width: auto;
-float: left;
 padding: 10px;
-
-
 }
 
-.texte-intro {
-
-margin:5px;
+.intro  {
+color :white;
+/*margin:5px;
 padding: 5px;
-text-align:justify;
+text-align:justify;*/
 
 }
