changement avant suppression

--- a/style.css
+++ b/style.css
@@ -37,11 +37,8 @@ margin-left: auto;
 
 .image-loup-intro {
 
-height: 300px;
-width: auto;
-float: left;
 padding: 10px;
-
+border-radius: 6%;
 
 }
 
