--- a/css/pagetype.css
+++ b/css/pagetype.css
@@ -2,5 +2,14 @@ body {
 
 font-family: 'Gentium Book Basic', serif;
 font-size: 16px;
-
+margin-top: 7em;
+background: url(../image/background/ep_naturalblack.png);
+}
+[class*="col-"],
+footer {
+    background-color: lightgreen;
+    border: 2px solid black;
+    border-radius: 6px;
+    line-height: 40px;
+    text-align: center;
 }
