--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,18 @@ background: url(../image/ep_naturalblack.png);
 margin-top: 7em;
 
 }
-/*
+
+h1{
+
+	color :white;
+}
+
+h2 {
+
+font-size: 40px;
+
+}
+
 .row [class^="col-"] {
     
     
@@ -14,7 +25,7 @@ margin-top: 7em;
     border: 1px solid #ddd;
     background-color: rgba(86,61,124,.15);
     border: 1px solid rgba(86,61,124,.2);
-}*/
+}
 
 .espace-navbar {
 
@@ -27,14 +38,9 @@ padding: 0px 15px 0px 15px;
 }
 
 .image-loup-intro {
-<<<<<<< HEAD:style.css
 
-padding: 10px;
+padding: 10px 10px 10px 0px;
 border-radius: 6%;
-
-=======
-padding: 10px;
->>>>>>> 993925e6d7efd30a8800ffef2e418b1a99f02e7d:css/style.css
 }
 
 .intro  {
