--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,12 @@ padding: 10px 10px 10px 0px;
 border-radius: 6%;
 }
 
+.image-loup-vital {
+
+padding: 10px 0px 10px 10px;
+border-radius: 6%;
+}
+
 .intro  {
 color :white;
 /*margin:5px;
