--- a/css/pagetype.css
+++ b/css/pagetype.css
@@ -13,3 +13,23 @@ footer {
     line-height: 40px;
     text-align: center;
 }
+.font-titre {
+	font-size: 3em;
+	color: white;
+}
+.border {
+	border-radius: 15px;
+	border-bottom: 2px solid black;
+}
+.carousel .item {
+	width: 100%;
+	height: auto;
+}
+.carousel img {
+	height: auto;
+	width: 100%;
+	max-height: 400px;
+	min-height: 400px;
+	max-width: 400px;
+	min-width: 400px;
+}
