--- a/bootstrap-3.3.7-dist/css/bootstrap.css
+++ b/bootstrap-3.3.7-dist/css/bootstrap.css
@@ -1380,28 +1380,28 @@ a.bg-primary:focus {
   background-color: #286090;
 }
 .bg-success {
-  background-color: #dff0d8;
+  background-color: #5CB85C;
 }
 a.bg-success:hover,
 a.bg-success:focus {
   background-color: #c1e2b3;
 }
 .bg-info {
-  background-color: #d9edf7;
+  background-color: #5BC0DE;
 }
 a.bg-info:hover,
 a.bg-info:focus {
   background-color: #afd9ee;
 }
 .bg-warning {
-  background-color: #fcf8e3;
+  background-color: #F0AD4E;
 }
 a.bg-warning:hover,
 a.bg-warning:focus {
   background-color: #f7ecb5;
 }
 .bg-danger {
-  background-color: #f2dede;
+  background-color: #d9534f;
 }
 a.bg-danger:hover,
 a.bg-danger:focus {
