--- a/css/pagetype.css
+++ b/css/pagetype.css
@@ -3,7 +3,8 @@ body {
 font-family: 'Gentium Book Basic', serif;
 font-size: 16px;
 margin-top: 7em;
-background: url(../image/background/ep_naturalblack.png);
+/*background: url(../image/background/ep_naturalblack.png);*/
+background-color: white;
 }
 /*[class*="col-"],
 footer {
@@ -15,7 +16,6 @@ footer {
 }*/
 .font-titre {
 	font-size: 3em;
-	color: white;
 }
 .border {
 	border-radius: 15px;
