--- a/css/style.css
+++ b/css/style.css
@@ -51,14 +51,16 @@ padding: 0px 15px 0px 15px;
 
 .image-loup-intro {
 
-padding: 10px 10px 10px 0px;
-border-radius: 6%;
+margin: 10px 10px 10px 0px;
+/*padding: 10px 10px 10px 0px;
+border-radius: 6%;*/
 }
 
 .image-loup-vital {
 
-padding: 10px 0px 10px 10px;
-border-radius: 6%;
+margin: 10px 0px 10px 10px;
+/*padding: 10px 0px 10px 10px;
+border-radius: 6%;*/
 }
 
 .intro  {
